Improve code based on code analysis.